# FastApi-App-Sleep-Diary

./: .coveragerc  .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  alembic.ini  app.py  app.yml  diary.csv  docker-compose.yaml  example.env  example_app.env  example_docker_app.env  example_test_app.env  flake8.ini  flask_app.yml  import_file.csv  importfile.csv  mypy.ini  pgadmin.yml  postgres.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run.py  sleep_diary.yml  sleepdairy.db  test.db
.github/workflows/: build.yaml  ci.yml  pre-commit.yaml  run_tests.yml  tests.yaml  tests.yml
api/: __init__.py  config.py  extension.py  requirements.txt
api/CRUD/: dream_notes.py  notation_queries.py  notations.py  users.py
api/exceptions/: errors.py  handler_400.py  handlers.py
api/models/: __init__.py  models.py
api/routes/: __init__.py
api/schemas/: flask_api_models.py  payload.py
api/static/: sleep_diary.csv
api/utils/: auth.py  jwt.py  jwt_auth.py  manage_notes.py  payload.py  restx_schema.py  user.py
app/: .env  __init__.py  all_routes.py  config.py  exception.py  functions.py  models.py  routes.py  sleep_dairy.db  sleep_diary.db  sleepdairy.db  views.py
app/Models/: schemas.py
app/Routes/: __init__.py  all_routes.py  main_page.py
app/controller/: __init__.py  check.py  editing.py  get_and_transform_data.py  manager.py  queries.py
app/exceptions/: exception.py
app/model/: models.py
app/routes/: __init__.py  authorization.py  general.py  sleep_and_other.py  sleep_diary.py
app/templates/: base.html  edit_dairy.html  edit_diary.html  edit_notation.html  login.html  notation_update.html  registration.html  sleep.html  sleep_dairy.html  sleep_diary.html  sleepdairy.html  user_page.html
app/view/: __init__.py  authorization.py  authorization_funcs.py  editing_diary.py  general.py  general_funcs.py  sleep_diary.py  sleep_diary_funcs.py  update_diary_entry_funcs.py
app/view_functions/: __init__.py  authorization.py  edit_diary.py  general.py  sleep_diary.py  update_diary_entry.py
common/baseclasses/: response.py  status_codes.py
common/generators/: diary.py  note.py  sleep_diary.py
common/pydantic_schemas/: main.py  token.py  user.py
docker_compose/: .dockerignore  Dockerfile_api  docker-compose.yaml
legacy_src/: flask_app.py
legacy_src/CRUD/: sleep_note_table.py  user_table.py
legacy_src/exceptions/: handlers.py
legacy_src/models/: models.py
legacy_src/pydantic_schemas/: main.py  token.py
legacy_src/utils/: jwt.py  manage_notes.py  payload.py
legacy_tests/api/: conftest.py  test_diary.py  test_main.py
legacy_tests/generators/: diary.py  note.py
sleep_diary_api/: Dockerfile_api  __init__.py  config.py  extension.py  requirements.txt
sleep_diary_api/Api_schema_models/: __init__.py  flask_api_models.py
sleep_diary_api/Api_schemas/: flask_api_models.py  payload.py
sleep_diary_api/CRUD/: notation_queries.py
sleep_diary_api/Models/: __init__.py  models.py  schemas.py
sleep_diary_api/Routes/: __init__.py  route_main.py  route_sleep.py
sleep_diary_api/Utils/: flask_api_models.py  manage_notes.py
src/: __init__.py  alembic.ini  config.py  extension.py  flask_app.py  main.py
src/CRUD/: sleep_note_table.py  user_table.py
src/adapters/: orm.py  repository.py
src/application/: __init__.py  app.py  authentication.py  services.py
src/baseclasses/: response.py
src/configs/: __init__.py  database.py  flask.py
src/domain/: __init__.py  errors.py  model.py  write.py
src/entrypoints/: api.py  app.py  flask_app.py
src/enums/: global_enums.py
src/exceptions/: handlers.py
src/generators/: sleep_diary.py
src/infra/: converters.py
src/infrastructure/: database.py
src/models/: __init__.py  models.py
src/orm/: __init__.py  base.py  mixins.py  note.py  user.py
src/project/: container.py  containers.py
src/pydantic_schemas/: main.py  main_info.py  sleep_notes.py  sleep_notes_diary.py  token.py  user.py
src/repositories/: __init__.py  abstract.py  base.py  fake.py  sqlalchemy.py
src/repository/: __init__.py  base.py  sqlalchemy.py
src/routes/: __init__.py
src/schemas/: main_info.py
src/service_layer/: __init__.py  diary.py  user.py  write.py
src/services/: __init__.py  write.py
src/settings/: __init__.py  database.py  flask.py  flask_restx.py
src/templates/: about.html  base.html  edit_diary.html  edit_notation.html  login.html  me.html  note_edit.html  note_form.html  registration.html  sign_in.html  sign_up.html  sleep.html  sleep_diary.html  week.html  weeks_info.html
src/utils/: auth.py  jwt.py  manage_notes.py  payload.py  restx_schema.py  status_codes.py
static/css/: main.css
static/example/: dairy.csv
templates/: analytics.html  base.html  basesleep.html  data-form.html  edit_dairy.html  login.html  main.html  notation_update.html  sleep.html  support.html
tests/: config.py  conftest.py  pytest.ini  use_cases.py
tests/api/: config.py  conftest.py  test_diary.py  test_main.py
tests/api_test/: conftest.py  response.py  test_diary.py  test_main.py
tests/e2e/: conftest.py
tests/generators/: diary.py  note.py
tests/integration/: conftest.py  orm_test.py
tests/test_api/: config.py  conftest.py  response.py  test_diary.py  test_main.py
tests/unit/: conftest.py  (+14 more)
(+703 files in other folders)
