[tool.black]
target-version = ["py310"]
line-length = 85

[tool.isort]
lines_between_types = 1
combine_as_imports = true
sections = [
    "FUTURE",
    "STDLIB",
    "FIRSTPARTY",
    "THIRDPARTY",
    "AIRFLOW",
    "LOCALFOLDER",
]
known_airflow = ["airflow"]
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true
extra_standard_library = ["typing_extensions"]
known_third_party = [
    "flask",
    "flask-sqlalchemy",
    "pydantic",
    "bcrypt",
    "flask-restx",
    "pydantic-settings",
    "more-itertools",
    "jsonref",
]
known_local_folder = [
    "src",
    "tests",
]
src_paths = ["."]
line_length = 85
include_trailing_comma = true
split_on_trailing_comma = true
skip = [".gitignore", ".dockerignore"]

[tool.flake8]
exclude = [".git", ".idea", "__pycache__", "venv",]
max-line-length = 85
count = true
statistics = true
max-complexity = 8
no-print-logs = true
per-file-ignores = [
#    "__init__.py:F811", # Повторный импорт объекта / переопределение
]
unused-arguments-ignore-abstract-functions = true
unused-arguments-ignore-dunder = true

[tool.mypy]
files = ["."]
plugins = ["pydantic.mypy"]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "tests/*"
disable_error_code = ["no-untyped-def"]

[tool.poetry]
name = "sleep-diary-app"
version = "0.1.0"
description = ""
authors = ["ivan"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
pydantic = "^2.7.4"
bcrypt = "^4.1.3"
flask-restx = "^1.3.0"
pydantic-settings = "^2.3.3"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
more-itertools = "^10.3.0"
jsonref = "^1.1.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.1.1"
faker = "^25.9.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^5.0.0"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.6.1"
pytest-metadata = "^3.1.1"
pytest = "^8.2.2"
black = "^24.4.2"
coverage = "^7.5.3"
mypy = "^1.10.1"
flake8 = "^7.1.0"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.4.26"
pep8-naming = "^0.14.1"
flake8-commas = "^4.0.0"
flake8-variables-names = "^0.0.6"
flake8-pydantic = "^0.3.1"
isort = "^5.13.2"
dlint = "^0.15.0"
flake8-pie = "^0.16.0"
flake8-simplify = "^0.21.0"
flake8-mutable = "^1.2.0"
flake8-unused-arguments = "^0.0.13"
flake8-useless-assert = "^0.4.4"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.14.0"
flake8-return = "^1.2.0"
flake8-print = "^5.0.0"
nitpick = "^0.35.0"
flake8-absolute-import = "^1.0.0.2"
flake8-pytest = "^1.4"
flake8-pytest-style = "^2.0.0"
flake8-pep604 = "^1.1.0"
flake8-black = "^0.3.6"
flake8-for-pycharm = "^0.4.1"
flake8-builtins = "^2.5.0"
pytest-mypy-plugins = "^3.1.2"
mccabe = "^0.7.0"
flake8-implicit-str-concat = "^0.4.0"
flake8-eradicate = "^1.5.0"
flake8-annotations-coverage = "^0.0.6"
flake8-annotations = "^3.1.1"
flake8-isort = "^6.1.1"

[tool.poetry.scripts]
app = "flask --app=src.flask_app:create_app run --reload --host=0.0.0.0 --port=8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
