[tool.poetry]
name = "sleep-diary-app"
version = "0.1.0"
description = ""
authors = ["ivan"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.4"
bcrypt = "^4.1.3"
pydantic-settings = "^2.3.3"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
more-itertools = "^10.3.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "2.0.40"
fastapi = {version = "0.115.12", extras = ["all"]}
punq = "^0.7.0"
python-multipart = "0.0.19"
alembic = "1.15.2"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.1.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-metadata = "^3.1.1"
pytest = "^8.2.2"
coverage = "^7.5.3"
pytest-mypy-plugins = "^3.1.2"
ipython = "^8.29.0"
pytest-mypy = "^0.10.3"


[tool.poetry.group.lint.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
