[tool.poetry]
name = "sleep-diary-app"
version = "0.1.0"
description = ""
authors = ["ivan"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "2.11.7"
bcrypt = "4.3.0"
pydantic-settings = "2.3.3"
pyjwt = { extras = ["crypto"], version = "2.8.0" }
more-itertools = "10.3.0"
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.43"
fastapi = "0.116.1"
python-multipart = "0.0.20"
alembic = "1.16.5"
httpx = "0.28.1"
dishka = "1.5.3"
starlette = "0.47.3"
uvicorn = "0.35.0"

[tool.poetry.group.dev.dependencies]
pytest-html = "4.1.1"
pytest-dotenv = "0.5.2"
pytest-cov = "6.2.1"
pytest-xdist = "3.6.1"
pytest-metadata = "3.1.1"
pytest = "8.2.2"
coverage = "7.5.3"
pytest-mypy-plugins = "3.1.2"
ipython = "9.5.0"
pytest-mypy = "1.0.1"
pytest-timeout = "2.4.0"


[tool.poetry.group.lint.dependencies]
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
